# market-regime-alpha

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backtesting/: README.md  build_ma_crossover_visual.py  run_buy_sell_point_hit_rate.py  run_cosco_dividend_t_backtest.py  run_cosco_parameter_search.py  run_dividend_25t_test_backtest.py  run_dividend_drawdown_report.py  run_dividend_monthly_pnl.py  run_dividend_watchlist_backtest.py  run_ma_crossover.py  run_macd_ablation.py  run_macd_event_rehearsal.py  run_top1000_screened_portfolio_backtest.py
data/raw/: sample_etf_ohlcv.csv
docs/: Data-Spec.md  Dividend-T-Platform.md  Formal-Data-Source-Capability-Audit.md  Formal-Data-Source-PoC-2026-07-14.md  Formal-MACD-Dataset-Builder-Plan.md  MACD-Research-Audit.md  Project-Structure.md  Sell-Side-Model-Spec.md  Tushare-App.md  Usage-Manual.md  index.html  退神股票涨跌理论-量化实现差距分析.md
docs/architecture/: Constitution-Consistency-Audit.md  Original-Intent-to-Current-Docs-and-Codex-Readiness-Audit.md  Original-Intent-to-R3-R4-Consistency-Audit.md  Original-Intent-to-R5-Consistency-Audit.md  Original-Intent-to-R5-Eligibility-Readiness-Audit.md  PRR-MVP-1-Reproducible-Candidate-Backtest.md  R1-Legacy-Characterization.md  R2-Minimal-V2-Kernel.md  R3-R4-Minimal-Research-Spine.md  legacy-asset-inventory.json
docs/constitution/: 00-Project-Vision.md  01-Core-Principles.md  02-Architecture-Blueprint.md  03-Research-Framework.md  04-Data-Constitution.md  05-Factor-Constitution.md  06-Strategy-Constitution.md  07-Validation-Constitution.md  08-Roadmap.md  09-Glossary.md  implementation-status.md
docs/data/: dividend_trends.json
docs/development/: WP-0-Close-B1-Verification.md
docs/research/: Daily-Quant-Selection-and-Manual-Trading-Research-Program.md  Entry-Position-Lifecycle-Exit-Research-Program.md  MR-1-Overnight-Morning-Pop-Signal-Validation.md  MR-2-Morning-Pop-Failure-Decomposition.md  MR-2A-Leak-Free-Regime-Diagnostic.md  MR-2B-F2A-Conditionality-Inputs.md  MR-2B-F2B-Statistical-Closure.md  MR-2B-F2B-v2-Post-Merge-Hardening.md  MR-2B-Final-Assessment.md  PIT-Candidate-Replication-Charter.md  PIT-Candidate-Replication-Success-Path-V2.md  PIT-Replication-Statistical-Protocol-V2.md  PIT-Validation-Partition-Governance.md  R5-Candidate-Dataset-Builder-Status.md  R5-Candidate-Discovery-Rehearsal-Charter.md  R5-Candidate-Model-Research-Program.md  R5-Current-Status.md  R5-Data-Source-Role-Matrix.md  R5-Generic-Provider-Export-Adapter.md  R5-Provider-Rehearsal-Market-Artifact.md  R5-Provider-Rehearsal-Trading-Eligibility-Policy-v2.md  R5-Versioned-Trading-Eligibility-Policy.md  R5-WP3-Provider-Routing-Status.md  R5-Xuntou-P0-Adapter-Status.md  R5-Xuntou-P0-Official-Documentation-Evidence.md  R5-Xuntou-Provider-and-Strategy-Priority.md  Research-Artifact-Identity-V3.md  Xuntou-PIT-Evidence-Qualification.md
docs/runbooks/: Xuntou-PIT-Validation-Export.md
docs/specs/: Entry-Path-Target-V1.md  Xuntou-P0-Native-Field-Mapping.md  Xuntou-PIT-Field-Mapping-V4.md  Xuntou-PIT-Validation-Bundle-V4.md
docs/theory/: 退神股票涨跌理论.md
reports/backtests/: Backtest-Report-Template.md
scripts/: analyze_capture_bias_stability.py  build_5min_bar_store.py  build_top1000_largecap_universe.py  cache_tencent_minute_bars.py  cosco_feishu_scheduler.py  cosco_timing_report.py  dividend_trend_scheduler.py  fetch_baostock_5min_batch.py  fetch_dividend_5min_csv.py  fetch_tushare_bars.py  fetch_yfinance_5min.py  run_mr1_overnight_morning_pop_validation.py  run_mr2_morning_pop_failure_decomposition.py  run_mr2a_leak_free_regime.py  run_mr2b_f2a_conditionality_inputs.py  run_mr2b_f2b_statistical_closure.py  run_mr2b_f2b_v2_statistical_closure.py  run_mr2b_f2b_v3_statistical_closure.py  run_pit_candidate_replication.py  run_pit_candidate_replication_v2.py  run_prr_mvp_1_candidate_backtest.py  run_tencent_composite_exploratory.py  run_wp3_candidate_research.py
src/market_regime_alpha/: __init__.py  backtesting.py  notifications.py
strategies/ideas/: Long-Term-Dividend-T-Model.md  Strategy-Idea-Template.md
tests/: test_a_share_bars.py  test_backtesting.py  test_bar_store.py  test_buy_point_quality.py  test_cosco_timing.py  test_dividend_t_app.py  test_dividend_t_backtest.py  test_dividend_t_chan.py  test_dividend_t_fundamentals.py  test_dividend_t_model.py  test_dividend_t_risk.py  test_dividend_trend_snapshot.py  test_fetch_baostock_5min_batch.py  test_formal_dataset_builder.py  test_git_publish.py  test_grid_25t_test.py  test_macd.py  test_macd_bars.py  test_macd_event_rehearsal.py  test_macd_experiments.py  test_macd_oos.py  test_market_environment.py  test_notifications.py  test_point_hit_rate.py  test_sell_side.py  test_signal_audit.py  test_signal_intent.py  test_strategy_modes.py  test_tencent_minute_cache.py  test_top1000_return_leakage_attribution.py  test_tushare_client.py  test_universe.py  test_visualization.py
tests/candidates/: test_baseline_ranking_evaluation_guards.py  test_composite_baseline.py  test_dataset_builder.py  test_directional_accuracy.py  test_minimal_research_spine.py  test_panel.py  test_r5_calendar_resolved_targets.py  test_r5_decision_time_contract.py  test_r5_eligibility_policy_pipeline.py  test_r5_opportunity_target_bundle.py  test_r5_rehearsal_pipeline.py  test_rehearsal_materializers.py  test_target_state_contracts.py
tests/core/: test_identity.py  test_status.py  test_time.py
tests/data/: __init__.py  test_contracts.py  test_path_evidence.py  test_trading_calendar.py
tests/features/: __init__.py  test_contracts.py
tests/legacy/: test_cosco_timing_characterization.py  test_dataset_contract_adapter.py  test_dividend_t_strategy_characterization.py  test_eligibility_sidecar_adapter.py  test_macd_experiment_adapter.py  test_trading_calendar_adapter.py  test_trend_snapshot_characterization.py  test_universe_sidecar_adapter.py
tests/research/: pit_replication_v2_fixtures.py  test_experiment_identity.py  test_mr1_daily_candidate_baseline.py  test_mr1_model_population_baselines.py  test_mr1_morning_pop.py  (+62 more)
(+210 files in other folders)
