[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "market-regime-alpha"
version = "0.1.0"
description = "Research-first Alpha Research Operating System for China A-shares with candidate discovery, lifecycle strategy research, validation, and execution simulation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "tushare>=1.4",
    "akshare>=1.18",
    "baostock>=0.9",
    "yfinance>=0.2.66",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "duckdb>=1.1",
    "pyarrow>=16.0",
    "polars>=1.0",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.2",
]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 140
src = ["src", "tests", "scripts", "backtesting"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E402", "E501"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
files = [
    "src/market_regime_alpha/core/identity.py",
    "src/market_regime_alpha/core/status.py",
    "src/market_regime_alpha/core/time.py",
    "src/market_regime_alpha/data/contracts.py",
    "src/market_regime_alpha/data/rehearsal.py",
    "src/market_regime_alpha/data/path_evidence.py",
    "src/market_regime_alpha/data/trading_calendar.py",
    "src/market_regime_alpha/universe/contracts.py",
    "src/market_regime_alpha/universe/artifacts.py",
    "src/market_regime_alpha/universe/eligibility_artifacts.py",
    "src/market_regime_alpha/universe/eligibility_policy.py",
    "src/market_regime_alpha/features/contracts.py",
    "src/market_regime_alpha/features/rehearsal_baselines.py",
    "src/market_regime_alpha/candidates/contracts.py",
    "src/market_regime_alpha/candidates/dataset.py",
    "src/market_regime_alpha/candidates/panel.py",
    "src/market_regime_alpha/candidates/historical_population.py",
    "src/market_regime_alpha/candidates/rehearsal_targets.py",
    "src/market_regime_alpha/candidates/rehearsal_opportunity_targets.py",
    "src/market_regime_alpha/candidates/rehearsal_calendar_targets.py",
    "src/market_regime_alpha/candidates/target_bundle.py",
    "src/market_regime_alpha/candidates/baselines.py",
    "src/market_regime_alpha/candidates/composite_baseline.py",
    "src/market_regime_alpha/candidates/evaluation.py",
    "src/market_regime_alpha/research/experiment_identity.py",
    "src/market_regime_alpha/strategies/entry/contracts.py",
    "src/market_regime_alpha/strategies/entry/materialization.py",
    "src/market_regime_alpha/research/provider_rehearsal_market_artifact.py",
    "src/market_regime_alpha/research/provider_export_adapter.py",
    "src/market_regime_alpha/research/tencent_composite_contracts.py",
    "src/market_regime_alpha/research/tencent_composite_merge.py",
    "src/market_regime_alpha/research/tencent_composite_quality.py",
    "src/market_regime_alpha/research/tencent_composite_acquisition.py",
    "src/market_regime_alpha/research/tencent_composite_materialization.py",
    "src/market_regime_alpha/research/tencent_composite_runner.py",
    "src/market_regime_alpha/research/tencent_composite_artifacts.py",
    "src/market_regime_alpha/research/tencent_composite_dividend_t.py",
    "src/market_regime_alpha/research/prr_mvp_1.py",
    "src/market_regime_alpha/research/prr_mvp_1_artifacts.py",
    "src/market_regime_alpha/research/mr1_morning_pop.py",
    "src/market_regime_alpha/research/mr1_candidate_baselines.py",
    "src/market_regime_alpha/research/mr1_research_runner.py",
    "src/market_regime_alpha/research/mr2_failure_decomposition.py",
    "src/market_regime_alpha/research/mr2a_regime.py",
    "src/market_regime_alpha/research/mr2b_excess.py",
    "src/market_regime_alpha/research/mr2b_context.py",
    "src/market_regime_alpha/research/mr2b_multiseed.py",
    "src/market_regime_alpha/research/mr2b_f2a.py",
    "src/market_regime_alpha/research/mr2b_f2a_artifacts.py",
    "src/market_regime_alpha/research/mr2b_f2a_reader.py",
    "src/market_regime_alpha/research/mr2b_f2b_protocol.py",
    "src/market_regime_alpha/research/mr2b_f2b_statistics.py",
    "src/market_regime_alpha/research/mr2b_f2b_primary.py",
    "src/market_regime_alpha/research/mr2b_f2b_secondary.py",
    "src/market_regime_alpha/research/mr2b_f2b_competing_events.py",
    "src/market_regime_alpha/research/mr2b_f2b.py",
    "src/market_regime_alpha/research/mr2b_f2b_artifacts.py",
    "src/market_regime_alpha/research/mr2b_f2b_reader.py",
    "src/market_regime_alpha/research/mr2b_f2b_v2_protocol.py",
    "src/market_regime_alpha/research/mr2b_f2b_v2_statistics.py",
    "src/market_regime_alpha/research/mr2b_f2b_v2_primary.py",
    "src/market_regime_alpha/research/mr2b_f2b_v2_competing_events.py",
    "src/market_regime_alpha/research/mr2b_f2b_v2.py",
    "src/market_regime_alpha/research/mr2b_f2b_v2_artifacts.py",
    "src/market_regime_alpha/research/mr2b_f2b_v2_reader.py",
    "src/market_regime_alpha/research/mr2b_verifier_registry.py",
    "src/market_regime_alpha/research/pit_replication_protocol.py",
    "src/market_regime_alpha/research/pit_replication_preflight.py",
    "src/market_regime_alpha/research/pit_replication_runner.py",
    "src/market_regime_alpha/research/pit_replication_artifacts.py",
    "src/market_regime_alpha/research/pit_replication_reader.py",
    "src/market_regime_alpha/research/prr_artifact_reader.py",
    "src/market_regime_alpha/research/prr_artifact_schemas.py",
    "scripts/run_mr1_overnight_morning_pop_validation.py",
    "scripts/run_mr2_morning_pop_failure_decomposition.py",
    "scripts/run_mr2a_leak_free_regime.py",
    "scripts/run_mr2b_f2a_conditionality_inputs.py",
    "scripts/run_mr2b_f2b_statistical_closure.py",
    "scripts/run_mr2b_f2b_v2_statistical_closure.py",
    "scripts/run_pit_candidate_replication.py",
    "src/market_regime_alpha/legacy/dataset_contract_adapter.py",
    "src/market_regime_alpha/legacy/eligibility_sidecar_adapter.py",
    "src/market_regime_alpha/legacy/macd_experiment_adapter.py",
    "src/market_regime_alpha/legacy/trading_calendar_adapter.py",
    "src/market_regime_alpha/legacy/universe_sidecar_adapter.py",
    "src/market_regime_alpha/dividend_t/cosco_timing.py",
    "src/market_regime_alpha/dividend_t/cosco_timing_breakout.py",
    "src/market_regime_alpha/dividend_t/cosco_timing_capital_flow.py",
    "src/market_regime_alpha/dividend_t/cosco_timing_daily.py",
    "src/market_regime_alpha/dividend_t/cosco_timing_intraday.py",
    "src/market_regime_alpha/dividend_t/cosco_timing_manual.py",
    "src/market_regime_alpha/dividend_t/cosco_timing_signal.py",
    "src/market_regime_alpha/dividend_t/cosco_timing_types.py",
    "src/market_regime_alpha/dividend_t/market_environment.py",
    "src/market_regime_alpha/dividend_t/position_sizing.py",
    "src/market_regime_alpha/dividend_t/strategy_modes.py",
    "src/market_regime_alpha/dividend_t/universe.py",
]
ignore_missing_imports = true
follow_imports = "silent"
check_untyped_defs = false
disallow_untyped_defs = false
no_implicit_optional = true
warn_unused_ignores = true
